--- a/lesson2_code/[3] - Lab Assignment/index.html
+++ b/lesson2_code/[3] - Lab Assignment/index.html
@@ -9,11 +9,13 @@
 
 <h1>Wendy G. Bite</h1>
 
+
+
 <nav>
 	<p>About Me &verbar; <a href="resume.html">Resume</a></p>
 </nav>
 
-<h3>ABOUT ME PAGE</h3>
+<h3>About Me</h3>
 <hr>
 <img src="Betty-White.jpg">
 <p>The series revolves around four older, single women (three widows and one divorcée) sharing a house in Miami, Florida. The owner of the house is a widow named Blanche Devereaux (Rue McClanahan), who was joined by fellow widow Rose Nylund (Betty White) and divorcée Dorothy Zbornak (Bea Arthur). They both responded to a room-for-rent ad on the bulletin board of a local grocery store. In the pilot episode, the women had a gay cook named Coco (Charles Levin), who was subsequently removed.[5] The three were soon joined by Dorothy's mother, Sophia Petrillo (Estelle Getty), after the retirement home where she lived, Shady Pines, burned down.</p>
