--- a/lesson2_code/[3] - Lab Assignment/resume.html
+++ b/lesson2_code/[3] - Lab Assignment/resume.html
@@ -8,7 +8,7 @@
 <h1>Wendy G. Bite</h1>
 
 <nav>
-	<p><a href="">About Me</a> &verbar; Resume</p>
+	<p><a href="index.html">About Me</a> &verbar; Resume</p>
 </nav>
 
 <h3>Resume</h3>
