--- a/lesson3_code/travel_blog_solution_ga/index.html
+++ b/lesson3_code/travel_blog_solution_ga/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<div class="wrapper">
+	<section class="wrapper">
 		<header>
 			<h1><a href="index.html">On the Road</a></h1>
 			<h2>The Adventure of a Lifetime</h2>
@@ -37,7 +37,7 @@
 				<p>Selfies sunt Tumblr, delectus small batch DIY umami sint. Polaroid chambray selfies McSweeney's Cosby sweater, Pitchfork tattooed assumenda Wes Anderson Blue Bottle twee Carles ennui. Nisi locavore fugiat sapiente salvia aliqua. Shoreditch kogi exercitation fashion axe. Wolf semiotics Pinterest, laboris quis master cleanse tousled small batch street art bespoke fingerstache dreamcatcher ethical labore. Dreamcatcher iPhone typewriter, tote bag four loko fanny pack master cleanse organic PBR reprehenderit actually. Craft beer drinking vinegar wayfarers, pork belly narwhal pariatur polaroid cupidatat in 8-bit distillery anim literally.</p>
 				<p class="more"><a href="#">Continues...</a></p>
 			</article>
-		</div>
+		</section>
 		<aside id="sidebar">
 			<div class="module">
 				<h4>About Us</h4>
